--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-langgraph
-langchain-openai
-pydantic
-python-dotenv
-requests
-beautifulsoup4
-tiktoken
+langchain==0.2.0
+langgraph==0.0.55
+langchain-openai==0.1.7
+langchain-anthropic==0.1.15
+langchain-community==0.2.0
+openai==1.30.1
+pydantic==2.7.1
+tiktoken==0.7.0
+python-dotenv==1.0.1
+requests==2.31.0
+beautifulsoup4==4.12.3
+pypyautogui==0.9.54
+PyPDF2==3.0.1
+chromadb==0.5.0
+celery==5.4.0
+fastapi==0.111.0
+uvicorn==0.29.0
+e2b-code-interpreter==0.0.10
+pytest==8.2.1
