--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-# THE AGENTIC AI PROTOCOL - API CONFIGURATION TEMPLATE
-# Instructions: Copy this file and rename it to ".env", then insert your keys.
+# EVERGREEN PROTOCOL - CONFIGURATION TEMPLATE
+# Rename this file to .env and insert your real keys
 
 OPENAI_API_KEY=your_openai_key_here
 ANTHROPIC_API_KEY=your_anthropic_key_here
-GOOGLE_API_KEY=your_google_key_here
-
-# Optional: Configuration for external tools
+TAVILY_API_KEY=your_tavily_key_here
+LANGCHAIN_API_KEY=your_langsmith_key_here
 NOTION_TOKEN=your_notion_token_here
-SLACK_BOT_TOKEN=your_slack_token_here
+STRIPE_API_KEY=your_stripe_key_here
