--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Agentic AI Specifics
+*.db
+*.log
+agent_memory_vault/
+agent_core_memory/
+current_screen.jpg
